--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "run-p type-check build-only",
     "preview": "vite preview",
     "test:unit": "vitest --environment jsdom --root src/",
+    "test:coverage": "vitest --coverage --environment jsdom --root src/",
     "test:e2e": "start-server-and-test preview :4173 'cypress run --e2e'",
     "test:e2e:dev": "start-server-and-test 'vite dev --port 4173' :4173 'cypress open --e2e'",
     "build-only": "vite build",
@@ -31,7 +32,7 @@
     "start-server-and-test": "^1.15.2",
     "typescript": "~4.7.4",
     "vite": "^4.0.0",
-    "vitest": "^0.25.6",
+    "vitest": "^0.25.8",
     "vue-tsc": "^1.0.12"
   }
 }
