--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "dev": "vite",
     "build": "run-p type-check build-only",
     "preview": "vite preview",
-    "test:unit": "vitest --environment jsdom --root src/",
-    "test:coverage": "vitest --coverage --environment jsdom --root src/",
+    "test:unit": "vitest --root src/",
+    "test:coverage": "vitest --coverage --root src/",
     "test:e2e": "start-server-and-test preview :4173 'cypress run --e2e'",
     "test:e2e:dev": "start-server-and-test 'vite dev --port 4173' :4173 'cypress open --e2e'",
     "build-only": "vite build",
@@ -27,6 +27,7 @@
     "@vue/test-utils": "^2.2.10",
     "@vue/tsconfig": "^0.1.3",
     "cypress": "^12.0.2",
+    "happy-dom": "^8.4.2",
     "jsdom": "^20.0.3",
     "npm-run-all": "^4.1.5",
     "start-server-and-test": "^1.15.2",
